--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,7 +30,7 @@ body{
 
 .video-area{
   text-align: center;
-  background: url("/storage/ftc_sup.jpg");
+  background: url("/storage/ftc_sup.png");
   background-size: cover;
   h2{
     font-size: 45px;
