--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8374,7 +8374,7 @@ body {
 
 .video-area {
   text-align: center;
-  background: url("/storage/ftc_sup.jpg");
+  background: url("/storage/ftc_sup.png");
   background-size: cover;
 }
 
