--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -47,6 +47,7 @@ body{
 header {
   height: 300px;
   max-width: 800px;
+  width: 100%;
   margin: auto;
   background: url("/storage/logo.png");
   background-size: cover;
